# AcousticModem

./: .clang-format  .gitignore  CMakeLists.txt  README.md  makefile  reference_10sec.pcm
src/: BitBuffer.cpp  BitBuffer.h  Configuration.cpp  Configuration.h  Correlator2.cpp  Correlator2.h  CorrelatorsSet.cpp  CorrelatorsSet.h  DecodeExample.cpp  Decoder.cpp  Decoder.h  EncodeExample.cpp  Encoder.cpp  Encoder.h  EnvelopeGenerator.cpp  EnvelopeGenerator.h  EnvelopePoint.h  FftEngine.cpp  FftEngine.h  FftEngineFftw.cpp  FftEngineFftw.h  FftEngineHelper.cpp  FftEngineHelper.h  FirBlockConvolver.cpp  FirBlockConvolver.h  FirKernelSource.cpp  FirKernelSource.h  IReferenceSource.h  IStreamCallbacks.h  KernelConverter.cpp  KernelConverter.h  LogConversions.h  MathDefines.h  Payload.cpp  Payload.h  PcmNormalization.cpp  PcmNormalization.h  PcmResampling.h  RandomGenerator.cpp  RandomGenerator.h  (+11 more)
